check_utf8_2.log
cargo :     Checking 
nanobot-core v0.1.0 
(C:\Users\AMAN ANU\Desktop\amxcod
es\nanobot\nanobot-rs-clean\crate
s\nanobot-core)
At line:1 char:1
+ cargo check -p nanobot-core 
2>&1 | Out-File -Encoding utf8 
check_utf8 ...
+ 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : No 
   tSpecified: (    Checking na  
  ...s\nanobot-core):String) [   
 ], RemoteException
    + FullyQualifiedErrorId : Na 
   tiveCommandError
 
warning: unused import: 
`std::sync::Arc`
 --> crates\nanobot-core\src\gate
way\web_adapter.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` on by 
default

warning: unused import: 
`ChannelMessage`
 --> crates\nanobot-core\src\gate
way\web_adapter.rs:9:38
  |
9 | use 
super::adapter::{ChannelAdapter, 
ChannelMessage};
  |                              
        ^^^^^^^^^^^^^^

warning: unused import: 
`std::collections::HashMap`
 --> crates\nanobot-core\src\skil
ls\metadata.rs:2:5
  |
2 | use 
std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: 
`TracerProvider`
 --> crates\nanobot-core\src\obse
rvability.rs:3:40
  |
3 | use opentelemetry_sdk::trace:
:{Tracer, TracerProvider};
  |                              
          ^^^^^^^^^^^^^^

warning: use of deprecated 
function `rand::thread_rng`: 
Renamed to `rng`
  --> crates\nanobot-core\src\sec
urity\secrets.rs:49:15
   |
49 |         rand::thread_rng().f
ill_bytes(&mut nonce_bytes);
   |               ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` 
on by default

warning: use of deprecated 
function `rand::thread_rng`: 
Renamed to `rng`
  --> crates\nanobot-core\src\sec
urity\secrets.rs:93:15
   |
93 |         rand::thread_rng().f
ill_bytes(&mut salt);
   |               ^^^^^^^^^^

warning: variable does not need 
to be mutable
   --> crates\nanobot-core\src\ag
ent\mod.rs:721:17
    |
721 |             let mut stream 
= loop {
    |                 ----^^^^^^
    |                 |
    |                 help: 
remove this `mut`
    |
    = note: 
`#[warn(unused_mut)]` on by 
default

error[E0133]: call to unsafe 
function `set_var` is unsafe and 
requires unsafe block
   --> crates\nanobot-core\src\ag
ent\mod.rs:180:26
    |
180 |                          st
d::env::set_var("GOOGLE_API_KEY",
 key); // AntigravityClient 
reads env
    |                          ^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^ call to unsafe function
    |
    = note: consult the 
function's documentation for 
information on how to avoid 
undefined behavior

warning: unused variable: `root`
  --> crates\nanobot-core\src\mem
ory\watcher.rs:89:28
   |
89 | fn is_ignored(path: &Path, 
root: &Path) -> bool {
   |                            
^^^^ help: if this is 
intentional, prefix it with an 
underscore: `_root`
   |
   = note: 
`#[warn(unused_variables)]` on 
by default

warning: unused variable: `pid`
  --> crates\nanobot-core\src\con
text\migration.rs:64:40
   |
64 |             let stmt_str = 
if let Some(pid) = parent_id {
   |                             
           ^^^ help: if this is 
intentional, prefix it with an 
underscore: `_pid`

warning: variable does not need 
to be mutable
  --> crates\nanobot-core\src\ski
lls\metadata.rs:69:13
   |
69 |         let mut 
dependencies = Vec::new();
   |             ----^^^^^^^^^^^^
   |             |
   |             help: remove 
this `mut`

warning: variable does not need 
to be mutable
  --> crates\nanobot-core\src\sys
tem\resources.rs:53:13
   |
53 |         let mut sys = 
self.system.lock().unwrap();
   |             ----^^^
   |             |
   |             help: remove 
this `mut`

For more information about this 
error, try `rustc --explain 
E0133`.
warning: `nanobot-core` (lib) 
generated 11 warnings
error: could not compile 
`nanobot-core` (lib) due to 1 
previous error; 11 warnings 
emitted
